Смотрел другие способы подключения шрифта

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,15 @@
+/* Шрифты?
+@font-face {
+  font-family: 'cuprum';
+  src:url('../fonts/web/cuprum.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+*/
 body {
   margin: 0;
   padding: 0;
-  font-family: "Cuprum", "Arial", sans-serif;
+  font-family: "Cuprum", "regular", sans-serif;
   min-width: 940px;
   line-height: 21px;
   font-size: 14px;
@@ -42,7 +50,9 @@ header {
   height: 42px;
   display: flex;
   align-items: center;
-  justify-content: center
+  justify-content: center;
+  box-sizing: border-box;
+  width: 150px;
 }
 
 .logo {
@@ -129,10 +139,10 @@ input[type=search]:focus {
 
 .bookmarks {
   position: relative;
-  min-width: 125px;
+  min-width: 135px;
   font-size: 17px;
   line-height: 18px;
-  padding-left: 25px;
+  padding-left: 15px;
 }
 
 .bookmarks:hover,
@@ -143,8 +153,8 @@ input[type=search]:focus {
 .bookmarks:before {
   content: "";
   position: absolute;
-  top: 13px;
-  left: 18px;
+  top: 12px;
+  left: 17px;
   width: 20px;
   height: 20px;
   background: url(../img/icon-bookmark.svg) no-repeat;
@@ -163,15 +173,16 @@ input[type=search]:focus {
 
 .basket {
   position: relative;
-  min-width: 125px;
+  min-width: 134px;
   font-size: 17px;
   line-height: 18px;
   text-align: center;
-  padding-left: 25px;
+  padding-left: 16px;
 }
 
 .header-top-wrapper .full-basket {
   background: #ee3643;
+  padding-left: 20px;
 }
 
 .header-top-wrapper .full-basket:hover {
@@ -182,7 +193,7 @@ input[type=search]:focus {
 .basket:before {
   content: "";
   position: absolute;
-  top: 13px;
+  top: 12px;
   left: 18px;
   width: 20px;
   height: 20px;
@@ -222,12 +233,12 @@ input[type=search]:focus {
 .header-bottom-wrapper {
   display: flex;
   flex-direction: row;
-  justify-content: center;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: flex-start;
   min-height: 110px;
   margin-top: 46px;
+  margin-bottom: 1px;
 }
 
 .tittle {
@@ -239,7 +250,7 @@ input[type=search]:focus {
 }
 
 .tittle p {
-  margin-top: 5px;
+  margin-top: 3px;
   margin-left: 53px;
 }
 
@@ -254,14 +265,14 @@ input[type=search]:focus {
   align-items: center;
   justify-content: center;
   position: relative;
-  width: 254px;
+  width: 242px;
   height: 39px;
   color: #ee3643;
   font-size: 21px;
   line-height: 18px;
   border: 3px solid #ffffff;
   margin-left: 6px;
-  padding-left: 10px;
+  padding-left: 22px;
 }
 
 .contacts a:before {
@@ -270,7 +281,7 @@ input[type=search]:focus {
   width: 30px;
   height: 30px;
   top: 10px;
-  left: 15px;
+  left: 13px;
   background: url(../img/icon-phone.svg) no-repeat;
 }
 
@@ -280,7 +291,7 @@ input[type=search]:focus {
   line-height: 24px;
   font-weight: 400;
   margin-top: 5px;
-  margin-left: 14px;
+  margin-left: 16px;
 }
 
 .user-block {
@@ -352,8 +363,8 @@ input[type=search]:focus {
 .regisration {
   display: flex;
   flex-direction: row;
-  margin-top: 5px;
-  margin-right: 72px;
+  margin-top: 7px;
+  margin-right: 73px;
 }
 
 .regisration a {
@@ -403,7 +414,7 @@ input[type=search]:focus {
 }
 
 .header-nav a {
-  padding: 20px 30px;
+  padding: 22px 30px;
   font-size: 17px;
   line-height: 17px;
 }
@@ -413,6 +424,8 @@ input[type=search]:focus {
   line-height: 17px;
   background: #32425c;
   border-bottom: 5px solid #293449;
+  height: 55px;
+  letter-spacing: 0.1px;
 }
 
 .header-top a,
@@ -443,8 +456,8 @@ main {
 }
 
 .sliders h2 {
-  padding-top: 30px;
-  padding-left: 25px;
+  padding-top: 25px;
+  padding-left: 23px;
   font-size: 36px;
   font-weight: 700;
   line-height: 30px;
@@ -453,9 +466,9 @@ main {
 }
 
 .sliders p {
-  margin-top: 8px;
-  padding-left: 25px;
-  font-family: 'PT Sans';
+  margin-top: 5px;
+  padding-left: 24px;
+  font-family: "PT Sans","Arial",sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 24px;
@@ -502,18 +515,19 @@ main {
 }
 
 .button-slider {
-  display: block;
-  width: 195px;
-  margin-left: 25px;
-  margin-top: 110px;
-  font-size: 14px;
-  padding: 10px 0;
-  line-height: 18px;
-  color: white;
-  text-transform: uppercase;
-  background: #ee3643;
-  text-align: center;
-  border-radius: 3px;
+    display: block;
+    margin-left: 25px;
+    margin-top: 122px;
+    font-size: 14px;
+    padding: 10px 45px 10px 49px;
+    line-height: 18px;
+    color: white;
+    margin-right: 400px;
+    box-sizing: border-box;
+    text-transform: uppercase;
+    background: #ee3643;
+    text-align: center;
+    border-radius: 3px;
 }
 
 .slider-controls label {
@@ -523,7 +537,7 @@ main {
   height: 18px;
   border-radius: 50%;
   cursor: pointer;
-  padding: 3px;
+  padding: 1px;
 }
 
 .slider-controls label::after {
@@ -531,8 +545,8 @@ main {
   width: 10px;
   height: 10px;
   position: absolute;
-  top: 11px;
-  left: 4px;
+  top: 6px;
+  left: 5px;
   z-index: 1;
   border-radius: 50%;
   background: #ffffff;
@@ -562,8 +576,8 @@ main {
 #product-2:checked ~ .slider-controls .slider-controls-item--2::before {
   content: "";
   position: absolute;
-  left: 50%;
-  top: 50%;
+  left: 67%;
+  top: 37%;
   z-index: 2;
   width: 6px;
   height: 6px;
@@ -589,8 +603,8 @@ main {
   width: 22px;
   height: 40px;
   cursor: pointer;
-  top: 115px;
-  right: 25px;
+  top: 113px ;
+  right: 18px;
   background: url("../img/icon-right.svg") no-repeat;
 }
 
@@ -602,14 +616,12 @@ main {
   justify-content: space-between;
   padding: 0;
   flex-wrap: wrap;
-  margin-bottom: 33px
+  margin-bottom: 32px;
 }
 
 .category {
-  padding-top: 20px;
-  padding-left: 25px;
-  width: 275px;
-  height: 103px;
+  width: 300px;
+  height: 123px;
   font-size: 24px;
   margin-bottom: 20px;
   color: #ffffff;
@@ -621,16 +633,20 @@ main {
   font-size: 24px;
   font-weight: 700;
   line-height: 30px;
+  padding-top: 20px;
+  padding-left: 23px;
 }
 
 .button-category {
   display: inline-block;
   font-size: 14px;
-  padding: 9px 0;
-  margin-top: 15px;
+  line-height: 18px;
+  padding: 10px 0;
+  margin-top: 12px;
   text-align: center;
   width: 135px;
   color: #ffffff;
+      margin-left: 23px;
   background: rgba(0, 0, 0, .1);
   text-transform: uppercase;
 }
@@ -667,7 +683,7 @@ main {
 }
 
 .category-discounts {
-  background: #3bbce3;
+  background: #8ed78f;
   background-image: url(../img/icon-4.svg);
   background-repeat: no-repeat;
   background-position: 195px 50%;
@@ -693,6 +709,7 @@ ul {
   flex-direction: row;
   justify-content: space-between;
   padding: 0;
+  margin-bottom: 0;
 }
 
 .popular-product-item:hover {
@@ -793,6 +810,7 @@ ul {
   color: #32425c;
   vertical-align: middle;
   text-transform: uppercase;
+  font-weight: 400;
 }
 
 .popular-product-item {
@@ -804,6 +822,7 @@ ul {
   line-height: 20px;
   font-weight: bold;
   text-align: center;
+  height: 316px;
 }
 
 .flag {
@@ -822,9 +841,12 @@ ul {
 }
 
 .popular-product-item .popular-image {
-  width: 218px;
-  margin-top: 30px;
-  height: 138px
+  width: 205px;
+    display: flex;
+    margin-bottom: 10px;
+    align-items: center;
+    justify-content: center;
+    height: 170px
 }
 
 .popular-product-item .popular-image img {
@@ -832,47 +854,50 @@ ul {
 }
 
 .popular-product-item h3 {
-  font-family: "PT sans";
+  font-family: "PT Sans","Arial",sans-serif;
   font-size: 18px;
   line-height: 20px;
-  min-height: 40px;
-  padding: 0 25px;
-  margin-top: 10px;
-  margin-bottom: 15px;
+  font-weight: 700;
+      padding: 0 20px;
+
 }
 
 .oldprice {
   font-size: 17px;
+   line-height: 18px;
   font-weight: 700;
   line-height: 18px;
   color: #a9a9a9;
   min-height: 20px;
-  margin-top: 15px;
-  margin-bottom: 10px;
+  margin: 9px auto;
   text-decoration-line: line-through;
+  font-family: "PT Sans","Arial",sans-serif;
 }
 
 .newprice {
   font-size: 17px;
+  line-height: 18px;
   font-weight: 700;
   background: #ee3643;
   color: #ffffff;
   position: relative;
-  width: 80px;
-  margin: 10px auto;
+  width: 114px;
   margin-bottom: 20px;
-  padding: 10px 30px;
+  margin-left: 43px;
+  margin-right: 36px;
+  padding: 10px;
   border-radius: 3px;
+  font-family: "PT Sans","Arial",sans-serif;
 }
 
 .newprice:after {
   content: "";
   position: absolute;
   top: 0;
-  right: -20px;
+  right: -25px;
   width: 0;
   height: 0;
-  border: 20px solid white;
+  border: 19px solid white;
   border-left-color: #ee3643;
 }
 
@@ -921,7 +946,7 @@ ul {
 /* Наконец-то я добрался до сервисов  */
 
 .service {
-  padding-top: 70px;
+  padding-top: 60px;
 }
 
 .service-background {
@@ -934,12 +959,14 @@ ul {
   line-height: 24px;
   color: #000000;
   text-transform: uppercase;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
 
 .service p {
-  font-size: 14px;
-  margin-bottom: 68px;
+  font-family: "PT Sans","Arial",sans-serif;
+  font-size: 13px;
+  margin-bottom: 66px;
+  line-height: 24px;
 }
 
 /* Слайдер сервисов */
@@ -1002,7 +1029,7 @@ ul {
 .service-right {
   padding: 0 80px;
   margin: 0 auto;
-  margin-top: 2px;
+  margin-top: 6px;
 }
 
 .service-right li {
@@ -1020,14 +1047,15 @@ ul {
 }
 
 .service-right p {
-  font-size: 14px;
-  margin-top: 35px;
+  font-size: 13px;
+  margin-top: 25px;
+  line-height: 24px;
   margin-bottom: 30px;
 }
 
 .service-delivery {
   background: url("../img/delivery.png") no-repeat;
-  background-position: right top;
+      background-position: 150px 20px;
 }
 
 .service-guaranty {
@@ -1063,7 +1091,7 @@ ul {
   flex-direction: row;
   justify-content: space-between;
   margin-bottom: 86px;
-  padding-top: 80px;
+  padding-top: 55px;
 }
 
 .about-company-left {
@@ -1073,11 +1101,11 @@ ul {
 
 .about-company-left h2,
 .about-company-right h2 {
-
   font-size: 30px;
   line-height: 38px;
   font-weight: 400;
   text-transform: uppercase;
+  margin-bottom: 22px;
 }
 
 .about-company-left p,
@@ -1085,24 +1113,28 @@ ul {
   font-family: 'PT Sans', Arial, sans-serif;
   font-size: 13px;
   line-height: 24px;
+  margin: 0;
+      margin-bottom: 22px;
 }
 
 .about-company-left ul {
   padding: 0;
+  margin: 0;
+  margin-bottom: 17px;
 }
 
 .about-company-left li {
   position: relative;
   margin: 0;
-  padding: 0 0 20px 35px;
+  padding: 0 0 20px 36px;
   font-size: 18px;
   line-height: 20px;
 
 }
 
 .about-company-right img {
-  margin-top: 20px;
-  margin-bottom: 40px;
+  margin-top: 10px;
+  margin-bottom: 33px;
 }
 
 .about-company-left li:before {
@@ -1179,13 +1211,14 @@ ul {
   font-size: 18px;
   line-height: 24px;
   color: #ffffff;
+  margin: 13px 3px;
 }
 
 .top-footer {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-bottom: 20px;
+  margin-bottom: 14px;
 
 }
 
@@ -1194,9 +1227,9 @@ ul {
   flex-direction: row;
   justify-content: space-between;
   align-content: flex-end;
-  width: 547px;
+  width: 548px;
   padding: 0;
-  margin-bottom: 5px;
+  margin-bottom: 7px;
   align-items: flex-end;
 }
 
@@ -1213,7 +1246,7 @@ footer a:hover {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-bottom: 30px;
+  margin-bottom: 37px;
 }
 
 .footer-center-nav {
@@ -1226,28 +1259,28 @@ footer a:hover {
 .footer-center-nav a {
   color: #ffda96;
 }
-
-.bottom-footer {
-  background: #293449;
-}
-
 .content-bottom-footer {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  min-height: 107px;
+    display: flex;
+    flex-direction: row;
+    padding-top: 21px;
+    height: 107px;
+    box-sizing: border-box;
 }
 
 .about-contacts {
   flex-basis: 33.3333%;
+  letter-spacing: 0.1px;
 }
 
 .footer-social {
-  display: flex;
-  flex-direction: row;
-  flex-basis: 33.3333%;
-  justify-content: center;
+
+    display: flex;
+    flex-direction: row;
+    flex-basis: 33.3333%;
+    /* justify-content: center; */
+    margin-top: 14px;
+    box-sizing: border-box;
+    padding-left: 70px;
 }
 
 .social-button {
@@ -1268,8 +1301,8 @@ footer a:hover {
   content: "";
   position: absolute;
   background: url("../img/icon-vk.svg") no-repeat;
-  top: 15px;
-  left: 7px;
+     top: 12px;
+    left: 10px;
   height: 42px;
   width: 42px;
 }
@@ -1279,7 +1312,7 @@ footer a:hover {
   position: absolute;
   background: url("../img/icon-fb.svg") no-repeat;
   top: 10px;
-  left: 14px;
+  left: 15px;
   height: 42px;
   width: 42px;
 }
@@ -1288,8 +1321,8 @@ footer a:hover {
   content: "";
   position: absolute;
   background: url("../img/icon-insta.svg") no-repeat;
-  top: 10px;
-  left: 11px;
+    top: 9px;
+    left: 8px;
   height: 42px;
   width: 42px;
 }
@@ -1300,22 +1333,25 @@ footer a:hover {
 }
 
 .bottom-footer-contacts {
-  display: flex;
-  flex-direction: row;
-  flex-basis: 33.3333%;
-  justify-content: space-around;
+    display: flex;
+    flex-direction: row;
+    letter-spacing: -0.3px;
+    padding-left: 13px;
 }
 
 .bottom-footer {
   font-size: 16px;
-  line-height: 24px;
   color: #ffffff;
+  line-height: 18px;
+   background: #293449;
 }
 
 .bottom-footer-contacts a {
-  font-size: 16px;
-  line-height: 24px;
-  color: #ffda96;
+font-size: 16px;
+    line-height: 24px;
+    color: #ffda96;
+    margin-top: -3px;
+    letter-spacing: 0.1px;
 }
 
 .bottom-footer-contacts a:active {
@@ -1326,6 +1362,10 @@ footer a:hover {
 .footer-mail {
   display: flex;
   flex-direction: column;
+}
+.footer-mail-right {
+  box-sizing: border-box;
+      padding-left: 51px;
 }
 
 @keyframes bounce {
@@ -1584,11 +1624,12 @@ footer a:hover {
   flex-direction: row;
   align-items: flex-start;
   position: relative;
+  margin: 10px auto;
 }
 
 .breadcrumbs li {
   display: inline-block;
-  padding: 10px;
+  padding: 9px 9px;
 }
 
 .breadcrumbs li:first-child:before {
@@ -1752,32 +1793,33 @@ fieldset {
   display: flex;
   flex-direction: column;
   width: 220px;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 .range-filter {
   width: 220px;
-  margin-top: 20px;
 }
 
 .filter legend {
   font-size: 17px;
   line-height: 30px;
-  font-style: bold;
   font-family: 'PT Sans';
   font-weight: 700;
   color: black;
   text-transform: uppercase;
+  margin-bottom: 15px;
 }
 
 .range-control {
-  position: relative;
-  height: 40px;
-  background: #f7f3ec;
-  margin-bottom: 15px;
-  padding-top: 40px;
-  padding-right: 30px;
-  padding-left: 30px;
+    position: relative;
+    background: #f7f3ec;
+    margin-bottom: 8px;
+    padding-top: 38px;
+    padding-right: 30px;
+    height: 80px;
+    box-sizing: border-box;
+    padding-left: 30px;
+
 }
 
 .range-control .scale {
@@ -1794,7 +1836,7 @@ fieldset {
 
 .range-control .toggle {
   position: absolute;
-  top: 31px;
+  top: 28px;
   width: 4px;
   height: 4px;
   padding: 0;
@@ -1810,7 +1852,7 @@ fieldset {
 }
 
 .range-control .toggle-max {
-  left: 150px;
+  left: 161px;
 }
 
 .price-control {
@@ -1823,8 +1865,10 @@ fieldset {
 .price-control input {
   text-align: center;
   font-size: 17px;
+  line-height: 18px;
+      font-family: "PT Sans","Arial",sans-serif;
   width: 93px;
-  height: 32px;
+  height: 34px;
   background: #f7f3ec;
   border: none;
 }
@@ -1834,7 +1878,7 @@ fieldset {
 .filter-producer,
 .filter-option {
   padding: 0;
-  margin-bottom: 0;
+  margin: 0;
 }
 
 .filter-option input[type=checkbox] + label {
@@ -1853,9 +1897,9 @@ fieldset {
 .filter-option input[type=checkbox]:checked + label:after {
   content: "";
   position: absolute;
-  background: url(/img/checkbox-on.svg) no-repeat;
+  background: url(../img/checkbox-on.svg) no-repeat;
   left: 0px;
-  top: -4px;
+  top: -2px;
   width: 26px;
   height: 26px;
 
@@ -1864,9 +1908,9 @@ fieldset {
 .filter-option input[type=checkbox] + label:before {
   content: "";
   position: absolute;
-  background: url(/img/checkbox-off.svg) no-repeat;
+  background: url(../img/checkbox-off.svg) no-repeat;
   left: 0px;
-  top: -4px;
+  top: -2px;
   width: 26px;
   height: 26px;
 }
@@ -1893,7 +1937,7 @@ fieldset {
 .filter-option input[type=radio]:checked + label:after {
   content: "";
   position: absolute;
-  background: url("/img/radio-on.svg") no-repeat;
+  background: url("../img/radio-on.svg") no-repeat;
   left: 0px;
   top: -4px;
   width: 26px;
@@ -1903,7 +1947,7 @@ fieldset {
 .filter-option input[type=radio] + label:before {
   content: "";
   position: absolute;
-  background: url("/img/radio-off.svg") no-repeat;
+  background: url("../img/radio-off.svg") no-repeat;
   left: 0;
   top: -4px;
   width: 26px;
